# Hospital-Management

./: README.md
Hospital/: CMakeLists.txt  main.cpp
Hospital/Classes/: DateTime.cpp  DateTime.h  Doctor.cpp  Doctor.h  Patient.cpp  Patient.h  Person.cpp  Person.h  Stack.cpp  Stack.h
Hospital/Repos/: DoctorRepo.cpp  DoctorRepo.h  MedicineRepo.cpp  MedicineRepo.h  PatientRepo.cpp  PatientRepo.h
Hospital/Service/: DoctorOperations.cpp  DoctorOperations.h  PatientOperations.cpp  PatientOperations.h  PersonInfo.cpp  PersonInfo.h
Hospital/UI/: Header.cpp  Header.h
Hospital/Utilities/: Global.cpp  Global.h  ParseFunctions.cpp  ParseFunctions.h  StringFunctions.cpp  StringFunctions.h
